# Coop-Mock

./: .dockerignore  .gitignore  Cargo.toml  diesel.toml  dockerfile  readme.md
.github/workflows/: development.yml
coop-service/: Cargo.toml
coop-service/src/: container.rs  errors.rs  lib.rs
coop-service/src/domain/models/: endpoints.rs  mod.rs
coop-service/src/domain/repositories/: endpoint.rs
coop-service/src/domain/services/: endpoint.rs
coop-service/src/infrastructure/: container_injection.rs  mod.rs
coop-service/src/infrastructure/databases/: mod.rs
coop-service/src/infrastructure/json_handler/: reader.rs
coop-service/src/infrastructure/json_handlers/: reader.rs  writer.rs
coop-service/src/infrastructure/json_models/: end_points.rs
coop-service/src/infrastructure/repositories/: endpoint.rs  mod.rs  settings_repository.rs
coop-service/src/infrastructure/repositories/json/: endpoint.rs
coop-service/src/infrastructure/repositories/postgres/: endpoint.rs
coop-service/src/services/: container_injection.rs  endpoint.rs  mod.rs  settings_service.rs
coop_service/: Cargo.toml
coop_service/src/: lib.rs
coop_service/src/domain/models/: endpoints.rs  mod.rs  settings.rs
coop_service/src/infrastructure/: container_injection.rs  mod.rs
coop_service/src/infrastructure/databases/: postgre.rs
coop_service/src/infrastructure/models/: end_points.rs  mod.rs  prelude.rs  settings.rs
coop_service/src/infrastructure/repositories/: settings_repository.rs
coop_service/src/services/: settings_service.rs
endpoint-handler/: Cargo.toml
endpoint-handler/src/: lib.rs
endpoint-handler/src/caching/: mod.rs
endpoint-handler/src/endpoint_template/: mod.rs  options.rs  parameter.rs  path.rs  response.rs
endpoint-handler/src/loader/: mod.rs
endpoint-handler/src/utils/: mock_handler.rs  mod.rs  path.rs  validator.rs
endpoint-handler/tests/: caching_tests.rs  templates_test.rs  templates_tests.rs
endpoint_handler/: Cargo.toml
endpoint_handler/src/: lib.rs
endpoint_handler/src/endpoint_template/: path.rs
endpoint_handler/src/mock_endpoint/: mod.rs  options.rs
endpoint_handler/tests/: templates_test.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240106_032056_add_options_col_to_endpoints.rs  m20240515_140830_adjust_endpoint_table_datatypes.rs  m20240518_053654_add_collection_table.rs
migrations/2023-11-10-125148_create_endpoints_setting/: down.sql  up.sql
migrations/2023-11-10-131241_adjust_endpoint_settings_jsontype/: down.sql  up.sql
migrations/2023-12-13-153802_add_method_and_enabled_columns_on_endpoints_setting/: down.sql  up.sql
migrations/2023-12-13_endpoints_setting_option_nullable/: down.sql  up.sql
src/: container.rs  main.rs  schema.rs  services.rs
src/api/: models.rs  settings.rs
src/api/endpoints/: settings.rs
src/api/models/: settings_models.rs
src/domain/models/: settings.rs
src/infrastructure/: mod.rs  models.rs
src/infrastructure/databases/: postgre.rs
src/infrastructure/models/: endpoint_settings.rs  settings.rs
src/infrastructure/repositories/: mock_repository.rs  settings_repository.rs
src/services/: mocks_service.rs  settings_service.rs
web-api/: Cargo.toml
web-api/src/: main.rs
web-api/src/api/: mod.rs
web-api/src/api/endpoints/: settings.rs
web-api/src/api/mocks/: mod.rs
web-api/src/common/: mod.rs
web-api/src/dtos/: endpoint.rs
web-api/src/utils/: mock_handler.rs  mod.rs
