[package]
name = "coop-mock"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["coop_service"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coop_service = { path = "coop_service" }
poem = { version = "1.3.59" }
tokio = { version = "1.35.0", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-trait = "0.1.74"
