[workspace.package]
authors = ["David Yen <david99900@gmail.com>"]
edition = "2021"
name = "coop-mock"

[workspace]
members = ["web-api", "coop-service", "endpoint-handler", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
web-api = { path = "web-api" }
coop-service = { path = "coop-service" }
endpoint-handler = { path = "endpoint-handler" }
migration = { path = "migration" }
