[workspace.package]
authors = ["David Yen <david99900@gmail.com>"]
edition = "2021"
name = "coop-mock"

[workspace]
members = ["web-api", "coop-service", "endpoint-handler", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
web-api = { path = "web-api" }
coop-service = { path = "coop-service" }
endpoint-handler = { path = "endpoint-handler" }
migration = { path = "migration" }

poem = { version = "2.0.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
async-trait = "0.1.77"
sea-orm = { version = "0.12.9", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
] }
chrono = "0.4.31"
thiserror = "1.0.56"