[package]
name = "coop_service"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.3", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
async-trait = "0.1.74"