[package]
name = "coop_service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.9", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
    "with-chrono",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
async-trait = "0.1.74"
tokio = { version = "1.35.0", features = ["full"] }
