[package]
name = "web-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
coop-service.workspace = true
endpoint-handler.workspace = true

poem.workspace = true
tokio.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
